--- a/CR_GUI/alpha.ipynb
+++ b/CR_GUI/alpha.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,6 +17,7 @@
     "from tkinter import *\n",
     "from PIL import ImageGrab\n",
     "import numpy as np #for numerical operations\n",
+    "import pandas as pd\n",
     "import tensorflow as tf #for dl\n",
     "import matplotlib.pyplot as plt #for plotting graphs\n",
     "import warnings\n",
@@ -36,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -374,11 +375,9 @@
     }
    ],
    "source": [
-    "# Global variables\n",
     "drawing = False\n",
     "canvas = None\n",
     "\n",
-    "# Initialize the drawing canvas\n",
     "def draw(event):\n",
     "    global drawing\n",
     "    if drawing:\n",
@@ -394,7 +393,6 @@
     "    drawing = False\n",
     "\n",
     "def get_image():\n",
-    "    # Capture the drawing from the canvas and preprocess\n",
     "    window.update()\n",
     "    x = window.winfo_rootx() + canvas.winfo_x()\n",
     "    y = window.winfo_rooty() + canvas.winfo_y()\n",
@@ -402,15 +400,15 @@
     "    y1 = y + canvas.winfo_height()\n",
     "    img = ImageGrab.grab().crop((x, y, x1, y1))\n",
     "    img = img.resize((28, 28))\n",
-    "    img = img.convert('L')  # Convert to grayscale\n",
+    "    img = img.convert('L')\n",
     "    img = np.array(img)\n",
     "    img = np.invert(img)\n",
-    "    img = img / 255.0  # Normalize pixel values\n",
+    "    img = img / 255.0\n",
     "    return img\n",
     "\n",
     "def predict():\n",
     "    img = get_image()\n",
-    "    img = np.expand_dims(img, axis=0)  # Add batch dimension for prediction\n",
+    "    img = np.expand_dims(img, axis=0)\n",
     "    prediction = model.predict(img)\n",
     "    predicted_label = np.argmax(prediction)\n",
     "    recognized_character = chr(predicted_label + ord('A'))\n",
