--- a/CR_GUI/alpha.ipynb
+++ b/CR_GUI/alpha.ipynb
@@ -13,19 +13,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import cv2 #for image processing\n",
+    "import cv2\n",
     "from tkinter import *\n",
     "from PIL import ImageGrab\n",
-    "import numpy as np #for numerical operations\n",
+    "import numpy as np\n",
     "import pandas as pd\n",
-    "import tensorflow as tf #for dl\n",
-    "import matplotlib.pyplot as plt #for plotting graphs\n",
+    "import tensorflow as tf\n",
+    "import matplotlib.pyplot as plt\n",
     "import warnings\n",
     "warnings.simplefilter(\"ignore\")\n",
     "\n",
-    "from tensorflow.keras.layers import Flatten, Dense #to produce layers\n",
-    "from sklearn.model_selection import train_test_split #for splitting the dataset\n",
-    "from emnist import extract_training_samples, extract_test_samples #loading the emnist dataset"
+    "from tensorflow.keras.layers import Flatten, Dense\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from emnist import extract_training_samples, extract_test_samples"
    ]
   },
   {
@@ -51,11 +51,10 @@
     }
    ],
    "source": [
-    "# Load the EMNIST dataset\n",
     "x_train, y_train = extract_training_samples('letters')\n",
     "x_test, y_test = extract_test_samples('letters')\n",
     "print(type(x_train))\n",
-    "# Split the data into training and test sets\n",
+    "\n",
     "x_train, x_test, y_train, y_test = train_test_split(x_train, y_train, test_size=0.2, random_state=42)\n",
     "print(len(x_train))\n",
     "print(len(x_test))"
@@ -74,11 +73,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Scale pixel values to [0, 1]\n",
     "x_train = x_train / 255.0  \n",
     "x_test = x_test / 255.0\n",
     "\n",
-    "# EMNIST labels start from 1, subtract 1 to make them start from 0\n",
     "y_train = y_train - 1  \n",
     "y_test = y_test - 1"
    ]
@@ -329,7 +326,6 @@
     "def clear_canvas():\n",
     "    canvas.delete(\"all\")\n",
     "\n",
-    "# GUI window setup\n",
     "window = Tk()\n",
     "window.title(\"Draw a letter\")\n",
     "canvas = Canvas(window, width=200, height=200, bg=\"white\")\n",
@@ -344,7 +340,7 @@
     "output_label = Label(window, text=\"\")\n",
     "output_label.pack()\n",
     "\n",
-    "window.mainloop()\n"
+    "window.mainloop()"
    ]
   }
  ],
