--- a/alpha.ipynb
+++ b/alpha.ipynb
@@ -108,7 +108,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Fitting and saving the model"
+    "Fitting the model"
    ]
   },
   {
@@ -182,6 +182,13 @@
    "source": [
     "test_loss, test_accuracy = model.evaluate(x_test, y_test)\n",
     "print(f\"Test Loss: {test_loss:.4f}, Test Accuracy: {test_accuracy:.4f}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Launch GUI"
    ]
   },
   {
